Fixed selected document not showing in chat and updated document title ellipses character limit to 17

--- a/django_app/frontend/src/stylesheets/components/side-panel.scss
+++ b/django_app/frontend/src/stylesheets/components/side-panel.scss
@@ -116,7 +116,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         min-width: 0;
-        max-width: 13ch;
+        max-width: 18ch; // 1ch to account for ellipses
         flex: 1;
         padding: 0;
       }
